# epoch-bench

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VALIDATION.md  pyproject.toml  results_anthropic.json  results_openai.json
.github/workflows/: ci.yml
epoch_bench/: __init__.py  analysis.py  cli.py  contamination.py  evaluate.py  figures.py  graph.py  human_baseline.py  leaderboard.py  prompts.py  report.py  robustness.py  runner.py  scaling.py  schema.py  suite.py  validation.py
epoch_bench/data/: bridge.jsonl  chain.jsonl  gate.jsonl  generated.jsonl  ripple.jsonl  tech_aliases.json
epoch_bench/models/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  gemini_provider.py  openai_provider.py
results/: claude-haiku-4-5.json  claude-opus-4-6.json  claude-sonnet-4-6.json  contamination.json  gpt-3.5-turbo.json  gpt-4-turbo.json  gpt-4.1-mini.json  gpt-4.1-nano.json  gpt-4.1.json  gpt-4o-mini.json  gpt-4o.json  o3-mini.json  o4-mini.json  scaling.json
tests/: conftest.py  test_analysis.py  test_contamination.py  test_evaluate.py  test_figures.py  test_graph.py  test_graph_generator.py  test_human_baseline.py  test_leaderboard.py  test_new_features.py  test_scaling.py  test_validation.py
